syntax = "proto3";

package dev.graphitdb.grpc;

option java_package = "dev.graphitdb.grpc.proto";
option java_outer_classname = "NodeServiceProto";

// Define the Node message
message Node {
  string id = 1;
  string label = 2;
  map<string, string> properties = 3;
}

// Request message for creating a node
message CreateNodeRequest {
  Node node = 1;
}

// Response message for creating a node
message CreateNodeResponse {
  bool success = 1;
  string message = 2;
}

// Request message for deleting a node
message DeleteNodeRequest {
  string nodeId = 1;
}

// Response message for deleting a node
message DeleteNodeResponse {
  bool success = 1;
  string message = 2;
}

// Request message for updating a node
message UpdateNodeRequest {
  Node node = 1;
}

// Response message for updating a node
message UpdateNodeResponse {
  bool success = 1;
  string message = 2;
}

// Request message for getting a node
message GetNodeRequest {
  string nodeId = 1;
}

// Response message for getting a node
message GetNodeResponse {
  Node node = 1;
}

message getAllNodesIdsRequest {
  repeated string nodeIds = 1;
}
message GetNodesRequest {
  repeated string nodeIds = 1;
}
message GetNodesResponse {
  repeated Node nodes = 1;
}
// Define the NodeService gRPC service
service NodeService {
  rpc CreateNode(CreateNodeRequest) returns (CreateNodeResponse);
  rpc DeleteNode(DeleteNodeRequest) returns (DeleteNodeResponse);
  rpc UpdateNode(UpdateNodeRequest) returns (UpdateNodeResponse);
  rpc GetNode(GetNodeRequest) returns (GetNodeResponse);
  rpc GetNodes(GetNodesRequest) returns (GetNodesResponse);
  rpc getAllNodesIds(getAllNodesIdsRequest) returns (getAllNodesIdsRequest);
}
